syntax = "proto3";

package server.user;

message SignInRequest {
  string email = 1; // required

  string password = 2; // required
}

message SignInResponse {
  string session_token = 1;
}

